[tool.poetry]
name = "traveller"
version = "0.1.0"
description = "An AI bot to help you with your trips"
authors = ["João Guilherme <joao.sczip@hotmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
pydantic = "^2.11.4"
python-dotenv = "^1.1.0"
langchain-community = "^0.3.24"
langchain = "^0.3.25"
langchain-ollama = "^0.3.3"
fast-flights = "^2.2"
langgraph = "^0.4.7"
langgraph-supervisor = "^0.0.25"
mcp = "^1.9.1"
langchain-mcp-adapters = "^0.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"
ruff = "^0.11.10"
aioredis = "^2.0.1"
pytest-cov = "^6.0.0"
pytest-watch = "^4.2.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "traveller.main:app"

[tool.ruff]
line-length = 120
exclude = ["__pycache__/"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
